Add Spring Boot integration, refactor analyzers, and enhance indexing/searching capabilities